# math_optim-rs

./: .gitignore  Cargo.toml  README.md
algebra/algebra/src/: lib.rs
algebra/galois_field/src/: combinatorics.rs  lib.rs
algebra/matrix/: Cargo.toml
algebra/modint/: Cargo.toml
data_structure/bucket_list/: Cargo.toml
data_structure/convex_hull_trick/: README.md
data_structure/disjoint_set_union/: Cargo.toml  README.md
data_structure/fenwick_tree/: Cargo.toml  README.md
data_structure/inclusive_scan/: Cargo.toml
data_structure/lazy_segment_tree/: README.md
data_structure/segment_tree/: README.md
data_structure/slope_trick/: Cargo.toml
data_structure/sparse_table/: Cargo.toml  README.md
data_structure/static_range_inversions/: Cargo.toml
data_structure/static_range_inversions_query/: Cargo.toml  README.md
data_structure/trie_tree/: Cargo.toml
fps/convolution/: Cargo.toml
geometry/closest_pair/: README.md
geometry/furthest_pair/: Cargo.toml  README.md
graph/euler/: README.md
graph/mst/: README.md
graph/scc/: README.md
number_theory/galois_field/: README.md
number_theory/gcd/: README.md
number_theory/modint/: Cargo.toml
number_theory/pascal_triangle/: README.md
number_theory/prime/: README.md
number_theory/quotients/: Cargo.toml
sequence/inversions/: Cargo.toml
sequence/longest_increase/: Cargo.toml  README.md
sequence/rolling_hash/: Cargo.toml  README.md
sequence/run_length/: Cargo.toml  README.md
tree/diameter/: README.md
tree/euler_tour/: Cargo.toml
tree/lowest_common_ancestor/: README.md
(+61 files in other folders)
