[package]
name = "math_optim-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "data_structure"
path = "data_structure"

[[bin]]
name = "number_theory"
path = "number_theory"

[[bin]]
name = "sequence"
path = "sequence"

[[bin]]
name = "graph"
path = "graph"

[workspace]
members = [ "data_structure/*", "number_theory/*", "sequence/*", "graph/*" ]
